<?xml version="1.0"?>
<package format="2">
  <name>execution_context_shmtime</name>
  <version>0.0.0</version>
  <description>The execution_context_shmtime package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>openrtm_aist</depend>

</package>
